Another full pass to fix bugs and errors

--- a/00-main.tex
+++ b/00-main.tex
@@ -420,7 +420,7 @@ This chapter explains the basic mathematical components of number theory: group,
 
 \clearpage
 
-\section{Roots of Unity and Cyclotomic Polynomial over Rings}
+\section{Roots of Unity and Cyclotomic Polynomial over Finite Field}
 \label{sec:cyclotomic-polynomial-integer-ring}
 \input{a09-cyclotomic-polynomial-integer-ring}
 
