--- a/a02-group.tex
+++ b/a02-group.tex
@@ -8,7 +8,7 @@
 \begin{tcolorbox}[title={\textbf{\tboxdef{\ref*{subsec:group-def}} Group}}]
 \noindent \textbf{\underline{Set Elements}}
 \begin{itemize}
-\item \textbf{Set ($\mathbb{S}$):} A unordered collection of elements: $\mathbb{S} = \{a, b, c, \ldots\}$
+\item \textbf{Set ($\mathbb{S}$):} An unordered collection of elements: $\mathbb{S} = \{a, b, c, \ldots\}$
 \item \textbf{Set Operations $\bm{(+, \cdot)}$:} We consider two binary operations on $\mathbb{S}$: addition $(+)$ and multiplication $(\cdot)$.
 \item \textbf{Additive Identity ($0_{(+)}$ often written $0$):} An element $i \in \mathbb{S}$ is an additive identity if for all $a \in \mathbb{S}$, $i + a = a = a + i$.
 \item \textbf{Multiplicative Identity ($1_{(\cdot)}$ often written $1$):} An element $i \in \mathbb{S}$ is a multiplicative identity if for all $a \in \mathbb{S}$, $i \cdot a = a = a \cdot i$
