--- a/a07-roots-of-unity.tex
+++ b/a07-roots-of-unity.tex
@@ -68,7 +68,7 @@ The set of all $n$-th roots of unity is the union $\bigcup_{d|n} P(d)$ (i.e., th
     \item Let $\omega = e^{2\pi i/n}$.
     Given $\zeta^n = 1$, for each $n$-th root of unity $\zeta$ is, $\zeta = \omega^{k_i}$ for $k_i = \{0, 1, \cdots, n-1\}$. Note that according to Theorem~\ref*{subsec:order-theorem}.1, $(\omega^{k_i})^n = 1$ if and only if $\textsf{ord}_{\mathbb{C}}(\omega^{k_i}) \text{ } | \text{ } n$. 
     \item Let $\textsf{ord}_{\mathbb{C}}(\omega^{k_i}) = d_i$. Then, $(\omega^{k_i})^{d_i} = 1$. Combining these two facts, each $n$-th root of unity $\omega^{k_i}$ is also the primitive $d_i$-th root of unity (i.e., a solution for $\zeta^{d_i} = 1$), that is, $\omega^{k_i} \in P(d_i)$. 
-    \item Remember that for each $\textsf{ord}_{\mathbb{F}}(\omega^{k_i}) = d_i$, $d_i \text{ } | \text{ } n$. For every $d_i$ that divides $n$, all the (primitive) $d_i$-th roots of unity are also the $n$-th root of unity. This is because the (primitive) $d_i$-th root of unity that satisfies $\zeta^{d_i} = 1$ also satisfies $\zeta^{n} = 1$ (as $n$ is a multiple of $d_i$).
+    \item Remember that for each $\textsf{ord}_{\mathbb{C}}(\omega^{k_i}) = d_i$, $d_i \text{ } | \text{ } n$. For every $d_i$ that divides $n$, all the (primitive) $d_i$-th roots of unity are also the $n$-th root of unity. This is because the (primitive) $d_i$-th root of unity that satisfies $\zeta^{d_i} = 1$ also satisfies $\zeta^{n} = 1$ (as $n$ is a multiple of $d_i$).
     \item Step 2 concludes that each $n$-th root of unity is a primitive $d_i$-th root of unity for some $d_i$ that divides $n$. Step 3 concludes that each $d_i$-th root of unity, where $d_i$ divides $n$, is also the $n$-th root of unity. Combining these two conclusions, the set of all $n$-th root of unity is equivalent to the union of all primitive $d_i$-th roots of unity where $d_i$ divides $n$ (i.e., $\bigcup_{d|n} P(d)$). 
     \end{enumerate}
 \end{myproof}
