--- a/a13-chinese-remainder.tex
+++ b/a13-chinese-remainder.tex
@@ -89,7 +89,7 @@ $x \equiv x' \equiv a_k \bmod n_k$
 
 $ $
 
-Then, by definition of modulo congruence, $ n_0 \mid (x - x') , n_1 \mid (x - x') , \text{ } n_2 \mid (x - x'), \gap{$\cdots$}, \text{ } n_k \mid (x - x')$.   
+Then, by definition of modulo congruence, $ n_0 \mid (x - x') , n_1 \mid (x - x') , \text{ } n_2 \mid (x - x'), \cdots, \text{ } n_k \mid (x - x')$.   
 
 Also, since $n_0, n_1, n_2, \cdots, n_k$ are coprime, it must be the case that $n_0n_1n_2n_3\cdots n_k \mid (x - x')$, or $N \mid (x - x')$. This means that $x \equiv x' \bmod N$. Therefore, $x$ is a unique solution in modulo $N$.
 
