--- a/b05-glev.tex
+++ b/b05-glev.tex
@@ -1,6 +1,6 @@
-A GLev ciphertext is a list of GLWE ciphertexts that encrypts the list of plaintexts $\dfrac{q}{\beta^1}M, \dfrac{q}{\beta^2}M, \gap{$\cdots$}, \dfrac{q}{\beta^l}M$, where $M$ is a plaintext encoded in a polynomial. Note that each $i$-th GLWE ciphertext of a GLev ciphertext uses a different plaintext scaling factor, which is: $\Delta_i = \dfrac{q}{\beta^i}$. The structure of GLev ciphertext is visually depicted in \autoref{fig:glev}.
+A GLev ciphertext is a list of GLWE ciphertexts that encrypt the list of plaintexts $\dfrac{q}{\beta^1}M, \dfrac{q}{\beta^2}M, \ldots, \dfrac{q}{\beta^l}M$, where $M$ is a plaintext encoded in a polynomial. Note that each $i$-th GLWE ciphertext of a GLev ciphertext uses a different plaintext scaling factor, which is: $\Delta_i = \dfrac{q}{\beta^i}$. The structure of GLev ciphertext is visually depicted in \autoref{fig:glev}.
 
-%Note that $t < \beta < q$ should hold. Especially, $t$ should be smaller than $\beta$, because if $t > \beta$, then the higher bits of $M$ will overflow beyond $q$ after computing $\dfrac{q}{\beta^1}M$. 
+
 Note that $\beta$ should be some value between $t$ and $q$. Specifically, $t$ should be smaller than or equal to $\beta$ because if $t$ is greater than $\beta$, then the higher bits of $M$ will overflow beyond $q$ when computing $\dfrac{q}{\beta^1}M$. 
 
 
@@ -21,42 +21,12 @@ $\textsf{GLev}_{S, \sigma}^{\beta, l}(M) = \Bigl \{\textsf{GLWE}_{S, \sigma}\lef
 \end{figure}
 
 
-\begin{comment}
-\subsubsection{Discussion}
-
-Suppose that the level $l$ of GLev is sufficient enough to fully decompose $M$ (\autoref{sec:decomp}), that is: 
-
-$M = \dfrac{q}{\beta^1}M + \dfrac{q}{\beta^2}M + \gap{$\cdots$} + \dfrac{q}{\beta^l}M $
-
-$ $
-
-\noindent Then, summing all elements of $\textsf{GLev}_{S, \sigma}^{\beta, l}(M)$ is equal to $\textsf{GLev}_{S, \sigma}(M)$, because:
-
-$= \textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^1}M\right) + \textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^2}M\right) + \gap{$\cdots$} + \textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^l}M\right)$ 
-
-$= \textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^1}M + \dfrac{q}{\beta^2}M + \gap{$\cdots$} + \dfrac{q}{\beta^l}M \right) $ \textcolor{red}{ $\rhd$ We will prove this step later  in \autoref{sec:glwe-add-cipher}}
-
-$= \textsf{GLWE}_{S, \sigma}(M)$
-
-$ $
-
-\noindent We will later leverage this property to implement TFHE's homomorphic multiplication (\autoref{subsec:tfhe-mult-cipher}).
-
-\end{comment}
 
 \subsection{Decryption}
 
-It is sufficient to decrypt any $i$-th GLWE ciphertext of the GLev ciphertext by using the secret $S$, with the scaling factor $\Delta_i = \dfrac{q}{\beta^i}$.
-
+We decrypt the first GLWE ciphertext ($i=1$) using the secret $S$, with the scaling factor $\Delta_1 = \dfrac{q}{\beta}$. This is because while the ciphertext contains $l$ encryptions, the higher indices $i > 1$ have progressively smaller scaling factors $\Delta_i = q/\beta^i$. If $\Delta_i$ becomes smaller than the noise threshold, those specific components cannot be decrypted correctly.
 
 \subsection{Lev and RLev}
 
 Lev is GLev with $n=1$. RLev is GLev with $k=1$.
 
-
-%\begin{figure}[h!]
-%    \centering
-%  \includegraphics[width=1\linewidth]{figures/decomp2.png}
-%  \caption{An illustration of a GLev ciphertext.}
-%  \label{fig:decomp2}
-%\end{figure}
