--- a/c05-glwe-key-switching.tex
+++ b/c05-glwe-key-switching.tex
@@ -71,7 +71,7 @@ $ =  A_{ i,1 } \cdot \textsf{GLWE}_{S', \sigma} \left (
 $ $
  
 $= \textsf{GLWE}_{S', \sigma} \left ( 
- \left ( A_{ i,1 } \dfrac{q}{\beta^1} + A_{ i,2 } \dfrac{q}{\beta^2} + \cdots + A_{ i,l } \dfrac{q}{\beta^l} \right ) \cdot S_i + E_i \right )$ \textcolor{red}{ $\rhd$ where $E_i = \sum\limits_{j=1}^{l} A_{ i, 1 } E_{i, j}$}
+ \left ( A_{ i,1 } \dfrac{q}{\beta^1} + A_{ i,2 } \dfrac{q}{\beta^2} + \cdots + A_{ i,l } \dfrac{q}{\beta^l} \right ) \cdot S_i + E_i \right )$ \textcolor{red}{ $\rhd$ where $E_i = \sum\limits_{j=1}^{l} A_{ i, j } E_{i, j}$}
 
  
 $= \textsf{GLWE}_{S', \sigma} \left ( 
